// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Komponen TampilanProduk renders komponen dengan data produk - snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px; padding: 16px;"
      >
        <a
          href="/produk/1"
        >
          <img
            alt="Sepatu Duramo SL"
            height="200"
            src="/Sepatu Duramo SL.jpg"
            style="width: 100%; height: 200px; object-fit: contain;"
            width="200"
          />
          <h4
            style="margin: 8px 0px 4px;"
          >
            Sepatu Duramo SL
          </h4>
          <p
            style="margin: 0px 0px 4px; color: rgb(136, 136, 136); font-size: 13px;"
          >
            Men's Shoes
          </p>
          <p
            style="margin: 0px; color: red; font-weight: bold;"
          >
            Rp 
            900.000
          </p>
        </a>
        <a
          href="/produk/2"
        >
          <img
            alt="Sepatu Samba OG"
            height="200"
            src="/Sepatu Samba OG.jpg"
            style="width: 100%; height: 200px; object-fit: contain;"
            width="200"
          />
          <h4
            style="margin: 8px 0px 4px;"
          >
            Sepatu Samba OG
          </h4>
          <p
            style="margin: 0px 0px 4px; color: rgb(136, 136, 136); font-size: 13px;"
          >
            Men's Shoes
          </p>
          <p
            style="margin: 0px; color: red; font-weight: bold;"
          >
            Rp 
            1.500.000
          </p>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px; padding: 16px;"
    >
      <a
        href="/produk/1"
      >
        <img
          alt="Sepatu Duramo SL"
          height="200"
          src="/Sepatu Duramo SL.jpg"
          style="width: 100%; height: 200px; object-fit: contain;"
          width="200"
        />
        <h4
          style="margin: 8px 0px 4px;"
        >
          Sepatu Duramo SL
        </h4>
        <p
          style="margin: 0px 0px 4px; color: rgb(136, 136, 136); font-size: 13px;"
        >
          Men's Shoes
        </p>
        <p
          style="margin: 0px; color: red; font-weight: bold;"
        >
          Rp 
          900.000
        </p>
      </a>
      <a
        href="/produk/2"
      >
        <img
          alt="Sepatu Samba OG"
          height="200"
          src="/Sepatu Samba OG.jpg"
          style="width: 100%; height: 200px; object-fit: contain;"
          width="200"
        />
        <h4
          style="margin: 8px 0px 4px;"
        >
          Sepatu Samba OG
        </h4>
        <p
          style="margin: 0px 0px 4px; color: rgb(136, 136, 136); font-size: 13px;"
        >
          Men's Shoes
        </p>
        <p
          style="margin: 0px; color: red; font-weight: bold;"
        >
          Rp 
          1.500.000
        </p>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Komponen TampilanProduk renders komponen dengan produk kosong - snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px; padding: 16px;"
      >
        <p>
          Tidak ada produk
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px; padding: 16px;"
    >
      <p>
        Tidak ada produk
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
